<resources>
    <string name="app_name">Snake</string>
    <string name="tap_to_play">Tap To Play</string>
    <string name="play">Play</string>
    <string name="high_score">High Score</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="snake_game">Snake Game</string>
    <string name="submit">Submit</string>
    <string name="enter_username">Enter username</string>
    <string name="sound_on">Sound On</string>
    <string name="sound_off">Sound Off</string>
    <string name="about_text">Welcome to the Classic Snake Game, a nostalgic journey back to the era of simple yet addictive gaming. Developed with passion by Keyur, Nonika, Rayanne, and Sukhdeep, this game offers a blend of timeless gameplay with a modern touch. Enjoy the challenge and share your high scores!</string>
</resources>